--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         
         <div class="welcome-message">
-            <p>Hola y bienvenido a mi portal geográfico. Aquí encontrarás herramientas y recursos para explorar datos geoespaciales de manera interactiva.</p>
+            <p>Hola mundo bienvenido a mi geportal  geográfico. Aquí encontrarás herramientas y recursos para explorar datos geoespaciales de manera interactiva.</p>
         </div>
 
         <div class="features">
